fixed up some responsiveness bugs on mobile devices

--- a/public/main.css
+++ b/public/main.css
@@ -641,7 +641,7 @@ p {
   color: #ffffff;
   text-align: center;
   font-size: 16px;
-  cursor: pointer;
+
 }
 .snip1446 * {
   -webkit-box-sizing: border-box;
@@ -735,9 +735,11 @@ p {
   color: #ffffff;
   text-align: center;
   opacity: 0.8;
+  cursor: pointer;
 }
 .snip1446 i:hover {
   opacity: 1;
+  cursor: pointer;
 }
 .snip1446:hover:after,
 .snip1446.hover:after,
@@ -811,8 +813,11 @@ p {
 /* LIGHTBOX */
 
 /* Style the Image Used to Trigger the Modal */
-.lightbox-img, i {
+.lightbox-img i {
     cursor: pointer;
+}
+.lightbox-img {
+  cursor : nesw-resize
 }
 
 #myImg:hover {opacity: 0.7;}
@@ -966,15 +971,28 @@ p.contactIn {
   padding-bottom: 5%;
 }
 
+#name input {
+  width:100%;
+}
+
 #email {
   padding-bottom: 5%;
   padding-left: 8%;
   display: block;
+  width: 90%;
+}
+
+#email input {
+  width:100%;
 }
 
 #message label {
   padding-left: 8%;
   display: block;
+}
+
+#message input {
+  width:100%;
 }
 
 textarea {
@@ -1254,9 +1272,38 @@ header#resume img {
     margin-right: 25%;
     padding-bottom: 5%;
   }
+  #nav-title-phone {
+    display: none;
+  }
+
 }
 
-
+@media screen and (max-width: 480px) {
+  /*#nav-title {
+    display: none;
+  }
+  #nav-title-phone {
+    display: inline-block;
+    margin: 0;
+    padding: 20px 0 0 20px;
+    max-height: 60px;
+    width: auto;
+  }*/
+  #nav-title {
+    display: inline-block;
+    margin: 0;
+    padding: 26px 0 0 15px;
+    max-height: 52px;
+    width: auto;
+  }
+  #nav-title-phone {
+    display: none;
+  }
+  #about img {
+    width: 100vw;
+    padding-bottom: 0%;
+  }
+}
 /* End Media Query for logo */
 
 
@@ -1438,7 +1485,7 @@ header#resume img {
 
 #languages i {
   font-size: 6em;
-  cursor: pointer;
+  cursor: default;
 }
 
 #languages span {
@@ -1447,7 +1494,7 @@ header#resume img {
 
 #languages p {
   padding-top: 10px;
-  cursor: pointer;
+  cursor: default;
 }
 
 #angular:hover p {
